--- a/css/time.css
+++ b/css/time.css
@@ -3,6 +3,10 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
 }
+h1, h2{
+  text-align: center;
+  color: white;
+}
 .result{
   display: none;
 }
